<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/spash_gradient"
        >


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_qus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_above="@+id/spin_kit"
            />




    <com.github.ybq.android.spinkit.SpinKitView
        android:layout_centerVertical="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        android:layout_centerHorizontal="true"
        style="@style/SpinKitView.Large.DoubleBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/dot_light_screen1"
        />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spin_kit"
            android:id="@+id/text_view"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_id"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_view"
        >


        <CheckBox
            android:id="@+id/check_no_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no"
            android:textColor="@color/dot_light_screen3"
            android:buttonTint="@color/dot_light_screen3"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_yes_id"
            android:layout_margin="10dp"
            android:text="@string/yes"
            android:textColor="@color/dot_light_screen3"
            android:buttonTint="@color/dot_light_screen3"
            />

    </LinearLayout>


        <Button
            android:id="@+id/btn_next_qus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:text="@string/next"
            android:textColor="?attr/whiteBlackTextColor" />

        <Button
            android:id="@+id/btn_skip_qus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_alignParentLeft="true"
            android:background="@null"
            android:text="@string/skip"
            android:textColor="?attr/whiteBlackTextColor" />

    </RelativeLayout>

